src-ken&y/objects/Material_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Allocate_on_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked: While creating planned PO from MRP records, the planned PO will be tagged with Material Tracking</description>
        <label>Allocate on Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Sequence__c</fullName>
        <label>Component Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Material Trackings</relationshipLabel>
        <relationshipName>Material_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Tracking</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Operation_Tracking__c.Work_Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Work_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Operation_Tracking__c</referenceTo>
        <relationshipLabel>Material Trackings</relationshipLabel>
        <relationshipName>Material_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Completed__c</fullName>
        <label>Quantity Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Issued__c</fullName>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Per_Assembly__c</fullName>
        <label>Quantity Per Assembly</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Required__c</fullName>
        <label>Quantity Required</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Scrapped__c</fullName>
        <label>Quantity Scrapped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Short__c</fullName>
        <formula>IF(TEXT(Type__c) != &apos;By-product&apos;, if(((Quantity_Required__c + Quantity_Scrapped__c) - Quantity_Issued__c)&gt;= 0 ,(Quantity_Required__c + Quantity_Scrapped__c) - Quantity_Issued__c , 0),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Short</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <label>Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Operation_Sequence__c</fullName>
        <label>Routing Operation Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Resource_Sequence__c</fullName>
        <label>Routing Resource Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Material Trackings</relationshipLabel>
        <relationshipName>Material_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Backflush</fullName>
                </value>
                <value>
                    <fullName>By-product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Material Trackings</relationshipLabel>
        <relationshipName>Material_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Material Tracking</label>
    <nameField>
        <displayFormat>MT-{0000000000}</displayFormat>
        <label>Material Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MT_with_same_work_order_Item</fullName>
        <active>true</active>
        <description>Material Tracking&apos;s item cannot be  same as the Work Order&apos;s item.</description>
        <errorConditionFormula>AND(

Item__c =  Work_Order__r.Item__c  ,

NOT( ISPICKVAL(Type__c , &apos;Repair&apos;))

)</errorConditionFormula>
        <errorMessage>Material Tracking&apos;s item cannot be  same as the Work Order&apos;s item.</errorMessage>
    </validationRules>
</CustomObject>